--- a/src/app/poem/[id]/page.module.scss
+++ b/src/app/poem/[id]/page.module.scss
@@ -11,7 +11,7 @@
   z-index: 10;
   top: 0;
   width: 50%;
-  min-width: 40rem;
+  min-width: 400px;
   background: #ffffed;
   margin: auto;
   padding: 1rem;
