--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,18 @@ a{
   text-decoration: inherit;
   cursor: default;
 }
+
+:root{
+  --card-bg-color: #ffffed;
+  --back-color: #00000045;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+  :root{
+    --card-bg-color: #000;
+    --back-color: #ffffff45;
+  }
+}
